segundo commit con otro color en el titulo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Brwon</title>
 </head>
 <body>
-    <h1>Brown :D</h1>
+    <marquee><h1 style="color: blue">Brown :D</h1></marquee>
+
+    <!--
+        - git bash : desde tu carpeta
+        - git status : ver cambios
+        - git add : añade al lobby
+        - git commit -m "un mensaje es importante"  : esto lo manda al disco duro
+        HASTA AQUI TODO QUEDA LOCAL
+        - git push : para empujar los cambios al repo en la nube
+    -->
 </body>
 </html>
