--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brwon</title>
+    <title>Brown</title>
 </head>
 <body>
-    <marquee><h1 style="color: blue">Brown :D</h1></marquee>
+    <marquee><h1 style="color: blue">Brown :D</h1><h1>Te Amo Preciosa</h1></marquee>
 
     <!--
         - git bash : desde tu carpeta
