--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Brown</title>
 </head>
 <body>
-    <marquee><h1 style="color: blue">Brown :D</h1><h1>Te Amo Preciosa</h1></marquee>
+    <marquee>
+        <h1 style="color: blue">Brown :D</h1>
+        <h1>Te Amo Preciosa</h1>
+    </marquee>
 
     <!--
         - git bash : desde tu carpeta
