seguimos probando, ahora con estilos

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brown</title>
+    <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <marquee>
-        <h1 style="color: blue">Brown :D</h1>
-        <h1>Te Amo Preciosa</h1>
+        <h1 id= "cabeza" style="color: blue">Brown :D</h1>
+        <h1 id="cuerpo"style= "color: white">Te Amo Preciosa</h1>
     </marquee>
 
     <!--
